[tool.poetry]
name = "cipher_xl3110"
version = "1"
description = "This is a python package for mds hw7"
authors = ["Xinran Li"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
